// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alignment renders correctly for a center aligned container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:1568px) {
  .c2 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c2 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c2 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`alignment renders correctly for a left aligned container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-right: auto;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:1568px) {
  .c2 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c2 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c2 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`alignment renders correctly for a right aligned container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-left: auto;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:1568px) {
  .c2 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c2 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c2 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`fixed width renders correctly when breakpoint is desktop 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  max-width: 1024px;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:1024px) {
  .c2 {
    max-width: 100%;
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`fixed width renders correctly when breakpoint is fullHD 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  max-width: 1440px;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:1440px) {
  .c2 {
    max-width: 100%;
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`fixed width renders correctly when breakpoint is mobile 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  max-width: 480px;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:480px) {
  .c2 {
    max-width: 100%;
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`fixed width renders correctly when breakpoint is tablet 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  max-width: 768px;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:768px) {
  .c2 {
    max-width: 100%;
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`fixed width renders correctly when breakpoint is widescreen 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  max-width: 1200px;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:1200px) {
  .c2 {
    max-width: 100%;
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`fluid renders correctly for a fluid container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  margin: 0 2rem;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;

exports[`renders correctly for a basic container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .c2 {
    margin: 0 1rem;
  }
}

@media (max-width:1568px) {
  .c2 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c2 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c2 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    test
  </div>
</div>
`;
